# tauri-vuetify-starter

./: .dockerignore  .editorconfig  .env  .env.example  .gitignore  .npmrc  AGENT.md  AI_INSTRUCTIONS.md  LICENSE  ReadMe.md  TEMPLATE_GUIDE.md  TEMPLATE_QUICKSTART.md  env.d.ts  eslint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
.choco/: README.md  app.nuspec.template  drop-compress-image.nuspec.template
.choco/tools/: chocolateyinstall.ps1  chocolateyinstall.ps1.template  chocolateyuninstall.ps1  chocolateyuninstall.ps1.template
.github/: copilot-instructions.md
.homebrew/: README.md  app.rb.template  drop-compress-image.rb
app/: .prettierignore  .stylelintignore  env.d.ts  eslint.config.ts  index.html  package.json  tsconfig.json  vite.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/icons/icon.icon/: icon.json
backend/: AGENT.md  Cargo.toml  setup-vcpkg.ps1  setup-vcpkg.sh  tauri.conf.json
docker/: Dockerfile.linux-arm64  Dockerfile.linux-x64  Dockerfile.windows-x64  Dockerfile.windows-x86_64-msvc  README.md
docs/: .prettierignore  AGENT.md  README.md  content.config.ts  eslint.config.ts  nuxt.config.ts  package.json
frontend/: AGENT.md  env.d.ts  eslint.config.ts  package.json  vite.config.ts
patches/: vuetify@4.0.4.patch
scripts/: README.md  build-chocolatey.ps1  build-homebrew.sh  build-linux-docker.ps1  build-linux-docker.sh  build-macos-compatible.sh  build-macos-x64-docker.sh  setup-x86-libs.sh  sync-env-config.mjs  sync-version.sh  update-version.ps1  update-version.sh
(+145 files in other folders)
