[package]
name = "tauri-vue3-app"
version = "0.0.0"
authors = ["Your Name <your@email.com>"]
edition = "2024"
rust-version = "1.93.1"
description = "A modern desktop application built with Tauri v2 and Vue 3"
readme = "../../ReadMe.md"
repository = "https://github.com/yourname/your-app-name"
homepage = "https://yourdomain.com/your-app-name"
license-file = "../../LICENSE"
keywords = ["application", "desktop", "tauri", "vue"]
categories = ["gui"]

[lib]
name = "tauri_vue3_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
jiff = { version = "0.2.20", features = ["serde"] }
tempfile = "3.26.0"

tauri = { version = "2.10.2", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-log = "2.8.0"
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2.5.3"
tauri-plugin-os = "2.3.2"

[profile.release]
lto = "thin"
codegen-units = 16
panic = "abort"
strip = true
opt-level = 3
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Graphics_Imaging",
  "Win32_System_Com",
] }

# macOS 固有の最適化
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"
core-foundation = "0.10.1"
core-graphics = "0.25.0"
objc = "0.2.7"

# Apple Silicon (ARM64) 向けの設定
# [target.aarch64-apple-darwin]
# rustflags = ["-C", "target-cpu=apple-a14"] # Apple Silicon互換性向上

# Linux 固有の最適化
[target.'cfg(unix)'.dependencies]
nix = "0.31.1"
